--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,11 @@ Authors@R: c(
     person("Wiktor", "Jurkowski", email = "Wiktor.Jurkowski@earlham.ac.uk", role = "aut"),
     person("Eszter", "Ari", email = "arieszter@gmail.com", role = c("aut", "cph")),
     person("Cezary", "Turek", email = "Cezary.Turek@gmail.com", role =  c("aut", "cre")),
-    person("Peter", "Forgacs", email = "Peter.Forgacs3@gmail.com", role =  "ctb"))
-Description: MulEA (Multi Enrichment Analysis) is a package/tool for functional analysis of multi-omics data sets.
-Among many packages that can be used for this task, only few could be applied either to multiple species, ontology types or providing an access to multiple statistics. MulEA is addressing this gap providing support for 25 species and any kind of data defining the knolwedge base. In addition, MulEA provides a unique permutation based, empirical false discovery rate correction of the p-values
+    person("Peter", "Forgacs", email = "Peter.Forgacs3@gmail.com", role =  "ctb"),
+    person("Leila", "Gul", email = "Lejla.Gul@earlham.ac.uk", role =  "ctb"),
+    person("Marton", "Oelbei", email = "olbei.marton@gmail.com", role =  "ctb"))
+Description: MulEA (Multi Enrichment Analysis) is a package/tool for functional analysis of multi-omics data sets. 
+    Among many packages that can be used for this task, only few could be applied either to multiple species, ontology types or providing an access to multiple statistics. MulEA is addressing this gap providing support for 25 species and any kind of data defining the knolwedge base. In addition, MulEA provides a unique permutation based, empirical false discovery rate correction of the p-values
 License: GPL-2 (see LICENSE)
 LazyData: TRUE
 Imports:
@@ -17,7 +19,9 @@ Imports:
     RSQLite (>= 2.0.0),
     plyr (>= 1.8.4),
     methods (>= 3.3.2),
-    fgsea (>= 1.0.2)
+    fgsea (>= 1.0.2),
+    stats (>= 3.4.1),
+    utils (>= 3.4.1)
 Depends:
     R (>= 3.4.0)
 Suggests:
