--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: MulEA
 Type: Package
+Encoding: UTF-8
 Title: MulEA - A Tool for Multi Enrichment Analysis
 Version: 0.99.10
 Date: 2016-04-08
@@ -22,7 +23,7 @@ Imports:
     fgsea (>= 1.0.2),
     stats (>= 3.4.1),
     utils (>= 3.4.1),
-    Rcpp (>= 0.12.13)
+    Rcpp
 LinkingTo:
     Rcpp
 Depends:
@@ -32,23 +33,10 @@ Suggests:
     rmarkdown,
     testthat
 VignetteBuilder: knitr
-Collate:
-    'RcppExports.R'
-    'Mulea.R'
-    'GenericFunctions.R'
-    'Utils.R'
-    'Methods.R'
-    'MuleaData.R'
-    'SetBasedEnrichmentTest.R'
-    'HypergeometricTest.R'
-    'KolmogorovSmirnovTest.R'
-    'SubramanianTest.R'
-    'SetBasedTest.R'
-    'RankedBasedTest.R'
 URL: https://github.com/koralgooll/MulEA
 BugReports: https://github.com/koralgooll/MulEA/issues
 biocViews:
     BiomedicalInformatics,
     GeneSetEnrichment
-RoxygenNote: 6.0.1
+RoxygenNote: 7.1.0
 SystemRequirements: C++11
