--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Imports:
 LinkingTo:
     Rcpp
 Depends:
-    R (>= 3.5.0)
+    R (>= 3.5.0),
+    ggraph (>= 2.0.3),
+    data.table (>= 1.13.0)
 Suggests:
     knitr,
     rmarkdown,
