barplot and heatplot improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("ORA")
 export("RankedBasedTest")
 export(plotBarplot)
 export(plotGraph)
+export(plotHeatmap)
 export(readGmtFileAsDataFrame)
 export(relaxModelAndResults)
 export(runTest)
