Bad values filtering and cutoff functionallity on plots.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ LinkingTo:
     Rcpp
 Depends:
     R (>= 3.5.0),
+    magrittr (>= 1.5),
     ggraph (>= 2.0.3),
     data.table (>= 1.13.0)
 Suggests:
