Edb results files reading.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("RankedBasedTest")
 export(plotBarplot)
 export(plotGraph)
 export(plotHeatmap)
+export(readEdbFileAsDataFrame)
 export(readGmtFileAsDataFrame)
 export(reshapeResults)
 export(runTest)
