GO filter function and arteficial GO generator.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("ORA")
 export("RankedBasedTest")
+export(filterOntology)
+export(generateInputData)
 export(plotBarplot)
 export(plotGraph)
 export(plotHeatmap)
