--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,12 +32,12 @@ Depends:
     R (>= 3.5.0),
     magrittr (>= 1.5),
     ggraph (>= 2.0.3),
-    data.table (>= 1.13.0)
+    data.table (>= 1.13.0),
+    tidyverse (>= 1.3.1)
 Suggests:
     knitr,
     rmarkdown,
     testthat,
-    tidyverse,
     tictoc
 VignetteBuilder: knitr
 URL: https://github.com/koralgooll/MulEA
@@ -45,5 +45,5 @@ BugReports: https://github.com/koralgooll/MulEA/issues
 biocViews:
     BiomedicalInformatics,
     GeneSetEnrichment
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 SystemRequirements: C++11
