--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,6 @@ Imports:
     plyr (>= 1.8.4),
     Rcpp,
     RSQLite (>= 2.0.0),
-    stats (>= 3.4.1),
     utils (>= 3.4.1)
 LinkingTo:
     Rcpp
@@ -33,7 +32,8 @@ Depends:
     magrittr (>= 1.5),
     ggraph (>= 2.0.3),
     data.table (>= 1.13.0),
-    tidyverse (>= 1.3.1)
+    tidyverse (>= 1.3.1),
+    stats (>= 3.4.1)
 Suggests:
     knitr,
     rmarkdown,
