Rename runTest to run_test everywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(plotGraph)
 export(plotHeatmap)
 export(readGmtFileAsDataFrame)
 export(reshapeResults)
-export(runTest)
+export(run_test)
 export(saveDataFrameAsGmtFile)
 importFrom(Rcpp,evalCpp)
 useDynLib(MulEA, .registration = TRUE)
