Rename reshapeResults to reshape_results everywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(plotBarplot)
 export(plotGraph)
 export(plotHeatmap)
 export(readGmtFileAsDataFrame)
-export(reshapeResults)
+export(reshape_results)
 export(run_test)
 export(saveDataFrameAsGmtFile)
 importFrom(Rcpp,evalCpp)
