Rename plotGraph to plot_graph everywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export("RankedBasedTest")
 export(convertListToGmtDataFrame)
 export(filterOntology)
 export(plotBarplot)
-export(plotGraph)
 export(plotHeatmap)
+export(plot_graph)
 export(readGmtFileAsDataFrame)
 export(reshape_results)
 export(run_test)
