Rename plotBarplot to plot_barplot everywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export("ORA")
 export("RankedBasedTest")
 export(convertListToGmtDataFrame)
 export(filterOntology)
-export(plotBarplot)
 export(plotHeatmap)
+export(plot_barplot)
 export(plot_graph)
 export(readGmtFileAsDataFrame)
 export(reshape_results)
