Rename plotHeatmap to plot_heatmap everywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ export("ORA")
 export("RankedBasedTest")
 export(convertListToGmtDataFrame)
 export(filterOntology)
-export(plotHeatmap)
 export(plot_barplot)
 export(plot_graph)
+export(plot_heatmap)
 export(readGmtFileAsDataFrame)
 export(reshape_results)
 export(run_test)
