--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(filterOntology)
 export(plot_barplot)
 export(plot_graph)
 export(plot_heatmap)
-export(readGmtFileAsDataFrame)
+export(read_gmt)
 export(reshape_results)
 export(run_test)
 export(saveDataFrameAsGmtFile)
