--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(plot_heatmap)
 export(read_gmt)
 export(reshape_results)
 export(run_test)
-export(saveDataFrameAsGmtFile)
+export(write_gmt)
 exportClasses(ora)
 importFrom(Rcpp,evalCpp)
 useDynLib(MulEA, .registration = TRUE)
