--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,10 @@ export(read_gmt)
 export(reshape_results)
 export(run_test)
 export(write_gmt)
+import(parallel)
 importFrom(Rcpp,evalCpp)
+importFrom(data.table,":=")
+importFrom(fgsea,fgsea)
+importFrom(magrittr,"%>%")
+importFrom(plyr,.)
 useDynLib(MulEA, .registration = TRUE)
