New edits to fix R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(read_gmt)
 export(reshape_results)
 export(run_test)
 export(write_gmt)
+import(ggplot2)
 import(parallel)
 importFrom(Rcpp,evalCpp)
 importFrom(data.table,":=")
 importFrom(fgsea,fgsea)
 importFrom(magrittr,"%>%")
 importFrom(plyr,.)
+importFrom(rlang,.data)
 useDynLib(MulEA, .registration = TRUE)
