--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports:
     data.table (>= 1.13.0),
     dplyr,
     fgsea (>= 1.0.2),
+    ggplot2,
     ggraph (>= 2.0.3),
     magrittr (>= 1.5),
     methods,
@@ -38,8 +39,10 @@ Imports:
     stats,
     stringi,
     tibble,
-    tidygraph
+    tidygraph,
+    utils
 Suggests:
+    devtools,
     knitr,
     rmarkdown,
     testthat (>= 3.1.4),
