--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(data.table,":=")
 importFrom(fgsea,fgsea)
 importFrom(magrittr,"%>%")
+importFrom(methods,new)
 importFrom(plyr,.)
 importFrom(rlang,.data)
 useDynLib(MulEA, .registration = TRUE)
