Export plot_lolipo. Proper roxygenization of package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ora)
 export(plot_barplot)
 export(plot_graph)
 export(plot_heatmap)
+export(plot_lollipop)
 export(read_gmt)
 export(reshape_results)
 export(run_test)
