--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,4 @@ importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(plyr,.)
 importFrom(rlang,.data)
-useDynLib(MulEA, .registration = TRUE)
+useDynLib(mulea, .registration = TRUE)
