--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: mulea
 Type: Package
 Encoding: UTF-8
-Title: mulea - A Tool for Multi Enrichment Analysis
+Title: mulea - an R package for enrichment analysis using multiple ontologies and empirical FDR correction
 Version: 0.99.10
 Date: 2016-04-08
 Authors@R: c(
     person("Cezary", "Turek", email = "Cezary.Turek@gmail.com", 
-           role =  c("aut", "cre")),
+           role =  c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-1445-5378")),
     person("Márton", "Ölbei", role = c("aut", "ctb"),
            comment = c(ORCID = "0000-0002-4903-6237")),
     person("Tamás", "Stirling", role = c("aut", "ctb"),
@@ -25,13 +26,7 @@ Authors@R: c(
     person("Eszter", "Ari", role = c("aut", "ctb"), 
            comment = c(ORCID = "0000-0001-7774-1067")))
 Maintainer: Cezary Turek <Cezary.Turek@gmail.com>
-Description: mulea (Multi Enrichment Analysis) is a package/tool for functional
-    analysis of multi-omics data sets. Among many packages that can be used for
-    this task, only few could be applied either to multiple species, ontology
-    types or providing an access to multiple statistics. mulea is addressing
-    this gap providing support for 25 species and any kind of data defining the
-    knolwedge base. In addition, mulea provides a unique permutation based,
-    empirical false discovery rate correction of the p-values.
+Description: Traditional gene set enrichment analyses are typically limited to a few ontologies and do not account for the interdependence of gene sets or terms, resulting in overcorrected p-values. To address these chellenges, we introduce mulea, an R package offering comprehensive overrepresentation and functional enrichment analysis. mulea employs an innovative empirical false discovery rate (eFDR) correction method, specifically designed for interconnected biological data, to accurately identify significant terms within diverse ontologies. Beyond conventional tools, mulea incorporates a wide range of ontologies encompassing Gene Ontology, pathways, regulatory elements, genomic locations, and protein domains. This flexibility empowers researchers to tailor enrichment analysis to their specific questions, such as identifying enriched transcriptional regulators in gene expression data or overrepresented protein domains in protein sets. To facilitate seamless analysis, mulea provides gene sets (in standardized GMT format) for 27 model organisms, covering 16 databases and various identifiers. Additionally, the muleaData ExperimentData Bioconductor package simplifies access to these 879 pre-defined ontologies. Furthermore, mulea's architecture allows for easy integration of user-defined ontologies, expanding its applicability across diverse research areas.
 License: MIT + file LICENSE
 LazyData: TRUE
 Depends:
