--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,4 +59,5 @@ VignetteBuilder: knitr
 URL: https://github.com/ELTEbioinformatics/mulea
 BugReports: https://github.com/ELTEbioinformatics/mulea/issues
 RoxygenNote: 7.3.1
+Roxygen: list(markdown = TRUE)
 Config/testthat/edition: 3
