--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,18 @@ export(run_test)
 export(write_gmt)
 exportClasses(gsea)
 import(ggplot2)
+import(magrittr)
 import(parallel)
+import(tictoc)
+import(tidyverse)
 importFrom(Rcpp,evalCpp)
 importFrom(data.table,":=")
+importFrom(dplyr,arrange)
 importFrom(fgsea,fgsea)
+importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(plyr,.)
+importFrom(readr,read_tsv)
 importFrom(rlang,.data)
 useDynLib(mulea, .registration = TRUE)
